--- a/backup.yml
+++ b/backup.yml
@@ -1,27 +1,22 @@
 ---
-- name: config backup for switches
+- name: Config backup for switches
   hosts: all
   gather_facts: no
   tasks:
-    - name: get timestamp
+    - name: Get timestamp
       shell: "date +%Y%m%d-%H-%M-%S"
       register: timestamp
 
-    - name: backup routers config
-      iosxe_config: 
+    - name: Ensure backup directory exists
+      file:
+        path: "data/{{ inventory_hostname }}"
+        state: directory
+        mode: '0755'
+
+    - name: Backup routers config
+      cisco.ios.ios_config: 
         backup: yes
         backup_options:
           filename: "running-config-{{ timestamp.stdout }}"
           dir_path: "data/{{ inventory_hostname }}"
       when: ansible_network_os == "cisco.ios.ios"
-
-    - name: HTTPS | push all changes.
-      git_acp:
-        user: cianfi
-        token: X
-        path: data/
-        branch: master
-        comment: backup_{{ timestamp.stdout }}
-        add: [ "." ]
-        mode: https
-        url: https://github.com/cianfi/com615-awx-playbooks.git
