--- a/playbooks/config_backup.yml
+++ b/playbooks/config_backup.yml
@@ -21,20 +21,20 @@
       ios_config:
         backup: true
         backup_options:
-          dir_path: com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/
-          filename: "{{ timestamp.stdout | to_nice_json }}.cfg.json"
+          dir_path: ./com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/
+          filename: "{{ timestamp.stdout }}.cfg"
 
-#    - name: Git Add
-#      ansible.builtin.command:
-#        cmd: "git add backup/"
-#        chdir: "com615-awx-backups/"
+    - name: Git Add
+      ansible.builtin.command:
+        cmd: "git add backup/"
+        chdir: "com615-awx-backups/"
 
-#    - name: Git Commit
-#      ansible.builtin.command:
-#        cmd: "git commit -m 'Updated: {{ timestamp.stdout }}'"
-#        chdir: "com615-awx-backups/"
+    - name: Git Commit
+      ansible.builtin.command:
+        cmd: "git commit -m 'Updated: {{ timestamp.stdout }}'"
+        chdir: "com615-awx-backups/"
 
-#    - name: Git Push
- #     ansible.builtin.command: 
-  #      cmd: "git push"
-   #     chdir: "com615-awx-backups/"
+    - name: Git Push
+      ansible.builtin.command:
+        cmd: "git push"
+        chdir: "com615-awx-backups/"
