--- a/playbooks/config_d_old.yml
+++ b/playbooks/config_d_old.yml
@@ -4,11 +4,11 @@
   become: false
   collections:
     - cisco.ios
-  tasks:
-    - set_fact:
-      _seven_days_ago: "{{ '%Y-%m-%d' | strftime((ansible_date_time['epoch']|int)-(86400*7)) }}"
-      _fourteen_days_ago: "{{ '%Y-%m-%d' | strftime((ansible_date_time['epoch']|int)-(86400*14)) }}"
-      _thirty_days_ago: "{{ '%Y-%m-%d' | strftime((ansible_date_time['epoch']|int)-(86400*30)) }}"
+#  tasks:
+ #   - set_fact:
+  #    _seven_days_ago: "{{ '%Y-%m-%d' | strftime((ansible_date_time['epoch']|int)-(86400*7)) }}"
+   #   _fourteen_days_ago: "{{ '%Y-%m-%d' | strftime((ansible_date_time['epoch']|int)-(86400*14)) }}"
+    #  _thirty_days_ago: "{{ '%Y-%m-%d' | strftime((ansible_date_time['epoch']|int)-(86400*30)) }}"
 
      # This task is to ensure that the local configuration repository is up-to-date
     - name: Group Name
@@ -20,14 +20,10 @@
       ansible.builtin.shell: "date +%Y-%m-%d"
       register: timestamp
 
-    # Create stage area
-    - name: Create Staging Area
-      ansible.builtin.commands:
-        cmd: mkdir stage
-
-    # Get the current running configuration of the device(s)
-    - name: Get running configuration
-      ...
+#    # Create stage area
+ #   - name: Create Staging Area
+  #    ansible.builtin.commands:
+   #     cmd: mkdir stage
 
 #    - name: Git Pull
 #      ansible.builtin.command:
@@ -38,13 +34,13 @@
       cisco.ios.ios_config:
         diff_against: "intended"
         match: "line"
-        intended_config: "{{ lookup('file','com615-awx-backups/backup/{{group_name}}/{{inventory_hostname}}/{{timestamp.stdout}}.cfg') }}"
+        intended_config: "{{ lookup('file','./com615-awx-backups/backup/{{group_name}}/{{inventory_hostname}}/2024-11-26.cfg') }}"
 
     - name: Display drift
       debug:
         var: config_drift.diff
 
-    # Delete Stage Area
-    - name: Delete Stage
-      ansible.builtin.commands:
-        cmd: rm -rf stage/
+#    # Delete Stage Area
+ #   - name: Delete Stage
+  #    ansible.builtin.commands:
+   #     cmd: rm -rf stage/
