--- a/playbooks/config_github.yml
+++ b/playbooks/config_github.yml
@@ -1,4 +1,9 @@
 ---
+- name: Set GitHub URL
+  ansible.builtin.command:
+    cmd: "git remote set-url 'origin' https://{{ ssh_key }}@github.com/cianfi/com615-awx-backups.git"
+    chdir: "com615-awx-backups/"
+
 - name: Git Add
   ansible.builtin.command:
     cmd: "git add backup/"
