--- a/playbooks/config_backup.yml
+++ b/playbooks/config_backup.yml
@@ -17,9 +17,9 @@
       ansible.builtin.set_fact:
         group_name: "{{ group_names[0] }}"
 
-    - name: Creating GitHub Message
-      ansible.builtin.set_fact:
-        message: 'Updated: {{ timestamp.stdout }}'
+#    - name: Creating GitHub Message
+ #     ansible.builtin.set_fact:
+  #      message: 'Updated: {{ timestamp.stdout }}'
 
     - name: Configuration Backup
       ios_config:
