--- a/playbooks/config_github.yml
+++ b/playbooks/config_github.yml
@@ -8,11 +8,17 @@
   ansible.builtin.command:
     cmd: "pwd"
     chdir: "com615-awx-backups/"
+  register: TEST
+
+- debug: var=TEST
 
 - name: WHATS IN HERE
   ansible.builtin.command:
     cmd: "ls -la"
     chdir: "com615-awx-backups/"
+  register: HERE
+
+- debug: var=HERE
 
 - name: Git Add
   ansible.builtin.command:
