--- a/playbooks/config_github.yml
+++ b/playbooks/config_github.yml
@@ -4,22 +4,6 @@
     cmd: "git remote set-url 'origin' https://{{ pac_key }}@github.com/cianfi/com615-awx-backups.git"
     chdir: "com615-awx-backups/"
 
-- name: TEST
-  ansible.builtin.command:
-    cmd: "pwd"
-    chdir: "com615-awx-backups/"
-  register: TEST
-
-- debug: var=TEST
-
-- name: WHATS IN HERE
-  ansible.builtin.command:
-    cmd: "ls -la"
-    chdir: "com615-awx-backups/"
-  register: HERE
-
-- debug: var=HERE
-
 - name: Git Add
   ansible.builtin.command:
     cmd: "git add backup/"
@@ -27,7 +11,7 @@
 
 - name: Git Commit
   ansible.builtin.command:
-    cmd: "git commit -m '{{ message }}'"
+    cmd: "git commit -m 'PASS?'"
     chdir: "com615-awx-backups/"
 
 - name: Git Push
