--- a/playbooks/config_github.yml
+++ b/playbooks/config_github.yml
@@ -1,7 +1,7 @@
 ---
 - name: Set GitHub URL
   ansible.builtin.command:
-    cmd: "git remote set-url 'origin' https://{{ pac_key }}@github.com/cianfi/com615-awx-backups.git"
+    cmd: "git config remote.origin.url https://cifish:{{ pac_key }}@github.com/cianfi/com615-awx-backups.git"
     chdir: "com615-awx-backups/"
 
 - name: Git Add
