--- a/playbooks/config_github.yml
+++ b/playbooks/config_github.yml
@@ -1,8 +1,12 @@
 ---
-- name: Set GitHub URL
+#- name: Set GitHub URL
+ # ansible.builtin.command:
+  #  cmd: "git config remote.origin.url https://cianfi:{{ pac_key }}@github.com/cianfi/com615-awx-backups.git"
+   # chdir: "com615-awx-backups/"
+- name: Git Creds
   ansible.builtin.command:
-    cmd: "git config remote.origin.url https://cianfi:{{ pac_key }}@github.com/cianfi/com615-awx-backups.git"
-    chdir: "com615-awx-backups/"
+    cmd: "git config --global user.email {{ email }} && git config --global user.name {{ user }}"
+    chdir: "com615-awx-backups"
 
 - name: Git Add
   ansible.builtin.command:
