--- a/playbooks/config_github.yml
+++ b/playbooks/config_github.yml
@@ -3,22 +3,18 @@
  # ansible.builtin.command:
   #  cmd: "git config remote.origin.url https://cianfi:{{ pac_key }}@github.com/cianfi/com615-awx-backups.git"
    # chdir: "com615-awx-backups/"
-- name: Git Creds
-  ansible.builtin.command:
-    cmd: "git config --global user.email {{ email }} && git config --global user.name {{ user }}"
-    chdir: "com615-awx-backups"
 
 - name: Git Add
   ansible.builtin.command:
     cmd: "git add backup/"
-    chdir: "com615-awx-backups/"
+    chdir: "/home/workuser/CC/com615-awx-backups/"
 
 - name: Git Commit
   ansible.builtin.command:
-    cmd: "git commit -m 'PASS?'"
-    chdir: "com615-awx-backups/"
+    cmd: "git commit -m '{{ message }}'"
+    chdir: "/home/workuser/CC/com615-awx-backups/"
 
 - name: Git Push
   ansible.builtin.command:
     cmd: "git push"
-    chdir: "com615-awx-backups/"
+    chdir: "/home/workuser/CC/com615-awx-backups/"
