--- a/playbooks/config_backup.yml
+++ b/playbooks/config_backup.yml
@@ -1,5 +1,5 @@
 ---
-- name: ""
+- name: "Get Running Configuration"
   hosts: SOU-GW
   # When we want to add additional list of hosts, we use : between
   # Example: SOU-GW:SOU-S:SOU-L
@@ -24,9 +24,8 @@
           dir_path: ./com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/
           filename: "{{ timestamp.stdout }}.cfg"
 
-    - name: WHERE AM I
-      ansible.builtin.command:
-        cmd: "pwd"
-
+- name: "Push to GitHub"
+  hosts: localhost
+  tasks:
     - name: Send to GitHub
       include_tasks: config_github.yml
