--- a/playbooks/config_backup.yml
+++ b/playbooks/config_backup.yml
@@ -24,6 +24,11 @@
           dir_path: ./com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/
           filename: "{{ timestamp.stdout }}.cfg"
 
+    - name: Fetch backup file to local machine
+      ansible.builtin.fetch:
+        src: /tmp/com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/{{ timestamp.stdout }}.cfg
+        dest: /home/workuser/CC/com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/
+
 - name: "Push to GitHub"
   hosts: localhost
   tasks:
