--- a/production_playbooks/config_backup.yml
+++ b/production_playbooks/config_backup.yml
@@ -1,10 +1,6 @@
 ---
-- name: "Get Running Configuration"
+- name: "Get Configuration"
   hosts: SOU-GW
-  # When we want to add additional list of hosts, we use : between
-  # Example: SOU-GW:SOU-S:SOU-L
-  gather_facts: no
-  no_log: false
   collections:
     - lvrfrc87.git_acp
 
@@ -21,12 +17,15 @@
       ansible.builtin.set_fact:
         group_name: "{{ group_names[0] }}"
 
-    - name: Configuration Backup
-      ios_config:
-        backup: true
-        backup_options:
-          dir_path: com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/
-          filename: "{{ timestamp.stdout }}.cfg"
+    - name: Get Device Facts
+      ios_facts:
+        gather_network_resources: all
+      register: device_facts
+
+    - name: Saving to File
+      copy:
+        content: "{{device_facts.ansible_facts.ansible_network_resources | to_nice_json}}"
+        dest: "com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/{{ timestamp.stdout }}.json"
 
     - name: Send to GitHub
       include_tasks: config_github.yml
