--- a/production_playbooks/router_snmp_config.yml
+++ b/production_playbooks/router_snmp_config.yml
@@ -2,6 +2,10 @@
 - name: Golden Standard SNMP Configuration Deployment
   hosts: SOU-GW
   gather_facts: no
+  vars:
+    - webex_alert_msg: "Router SNMP Configurations have been applied with golden standard."
+  vars_files:
+    - secrets.yml
   tasks:
     - name: Retrieve Gold Standard SNMP Configuration
       ansible.builtin.include_vars:
@@ -27,3 +31,6 @@
       cisco.ios.ios_config:
         lines:
           - "snmp-server host {{snmp.host.ip}} version {{snmp.host.version}} {{snmp.host.community}}"
+
+    - name: Alert
+      include_tasks: alert.yml
