--- a/production_playbooks/config_github.yml
+++ b/production_playbooks/config_github.yml
@@ -1,4 +1,9 @@
 ---
+- name: Set Git Remote
+  ansible.builtin.command:
+    cmd: "git remote ..."
+    chdir: "/home/workuser/CC/com615-awx-backups/"
+
 - name: Git Add
   ansible.builtin.command:
     cmd: "git add backup/"
