--- a/production_playbooks_awx/config_github.yml
+++ b/production_playbooks_awx/config_github.yml
@@ -1,4 +1,9 @@
 ---
+- name: Set Git Remote
+  ansible.builtin.command:
+    cmd: "git remote add origin https://{{pat_key}}@github.com/cianfi/com615-awx-backups.git"
+    chdir: "/home/workuser/CC/com615-awx-backups/"
+
 - name: Git Add
   ansible.builtin.command:
     cmd: "git add backup/"
