--- a/production_playbooks_awx/config_backup.yml
+++ b/production_playbooks_awx/config_backup.yml
@@ -18,7 +18,8 @@
 
     - name: Get Device Facts
       ios_facts:
-        gather_network_resources: all
+        gather_network_resources:
+          - "!vlans"
       register: device_facts
 
     - name: Retrieve Git Backups Repository
