--- a/test_playbooks/config_backup.yml
+++ b/test_playbooks/config_backup.yml
@@ -25,13 +25,16 @@
         gather_network_resources: all
       register: device_facts
 
-    - name: Saving to File
-      copy:
-        content: "{{device_facts.ansible_facts.ansible_network_resources | to_nice_json}}"
-        dest: "com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/{{ timestamp.stdout }}.json"
+    - debug:
+        msg: "{{ device_facts | to_nice_json }}"
 
-    - name: Send to GitHub
-      include_tasks: config_github.yml
+#    - name: Saving to File
+    #  copy:
+   #     content: "{{device_facts.ansible_facts.ansible_network_resources | to_nice_json}}"
+  #      dest: "com615-awx-backups/backup/{{ group_name }}/{{ inventory_hostname }}/{{ timestamp.stdout }}.json"
+
+#    - name: Send to GitHub
+ #     include_tasks: config_github.yml
 
     - name: Alert
       include_tasks: alert.yml
