--- a/production_playbooks_awx/config_backup.yml
+++ b/production_playbooks_awx/config_backup.yml
@@ -28,6 +28,7 @@
           - acl_interfaces
           - l2_interfaces
           - snmp_server
+          - service
       register: device_facts
 
     - name: Ensure the backup directory exists
